# SPheromone

./: CMakeLists.txt  README.md  config.yml
benchmarks/: CMakeLists.txt
benchmarks/00/: CMakeLists.txt  README.md
benchmarks/00/client/: invoker.cpp  register.cpp
benchmarks/00/scripts/: invoke.sh  register.sh  start_all.sh  stop_all.sh
benchmarks/00/src/: back.cpp  client.cpp  front.cpp  inc.cpp
benchmarks/00/utils/: utils.h
benchmarks/01/: CMakeLists.txt  README.md  back_end.cpp  front_end.cpp  invoke.cpp
benchmarks/01/client/: client.cpp  invoker.cpp  register.cpp
benchmarks/01/invoke/: invoke.cpp
benchmarks/01/scripts/: invoke.sh  start_all.sh  stop_all.sh
benchmarks/01/src/0_frontend/: frontend.cpp
benchmarks/01/src/1_backend/: backend.cpp
benchmarks/01/src/2_others/: invoker.cpp  register.cpp
benchmarks/01/utils/: utils.h
benchmarks/02/: CMakeLists.txt
benchmarks/02/common/: ClientPool.h  FaasWorker.h  GenericClient.h  MCClient.h  MediaServiceTypes.h  RedisClient.h  logger.h  utils.h  utils_memcached.h  utils_mongodb.h  utils_redis.h
benchmarks/02/config/: config.yml  service_config.json
benchmarks/02/scripts/: invoke.sh  register.sh  start_all.sh  stop_all.sh
benchmarks/02/src/0_WebServer/: WebServer0.cpp
benchmarks/02/src/1_MovieIdService/: MovieIdHandler.h  RegisterMovieId.cpp  UploadMovieId1.cpp
benchmarks/02/src/1_TextService/: TextHandler.h  UploadText1.cpp
benchmarks/02/src/1_UniqueIdService/: UniqueIdHandler.h  UploadUniqueId1.cpp
benchmarks/02/src/2_RatingService/: RatingHandler.h  UploadRating2.cpp
benchmarks/02/src/3_ComposeReviewService/: ComposeReviewHandler.h  UploadMovieId3.cpp  UploadRating3.cpp  UploadText3.cpp  UploadUniqueId3.cpp
benchmarks/02/src/4_ReviewStorageService/: ReviewStorageHandler.h  SendTestReview4.cpp  StoreReview4.cpp
benchmarks/02/test/: invoker_test1.cpp  register_store_review_4.cpp  register_test1.cpp
benchmarks/02/utils/: utils_for_test.h
benchmarks/05/: CMakeLists.txt
benchmarks/05/client/: invoker.cpp  register.cpp
benchmarks/05/config/: config.yml
benchmarks/05/scripts/: invoke.sh  register.sh  start_all.sh  stop_all.sh
benchmarks/05/src/stage_0/: front.cpp
benchmarks/05/src/stage_1/: lastpx.cpp  marketdata.cpp  side.cpp  trddate.cpp  volume.cpp
benchmarks/05/src/stage_2/: marginBalance.cpp
benchmarks/06/: CMakeLists.txt  README.md
benchmarks/06/client/: invoker.cpp  register.cpp
benchmarks/06/config/: config.yml
benchmarks/06/data/: marginBalance.json  portfolios.json  yfinance_test.csv
benchmarks/06/scripts/: copy-func.sh  invoke.sh  start_all.sh
benchmarks/06/src/stage_0/: marketdata.cpp
benchmarks/06/src/stage_1/: run_audit.cpp
benchmarks/06/src/stage_2/: marginBalance.cpp
benchmarks/06/utils/: utils.h  utils_for_test.h
common/include/: anna_threads.hpp  common.hpp  kvs_threads.hpp  op_threads.hpp  requests.hpp  safe_ptr.hpp  trigger.hpp  types.hpp
common/include/anna_client/: kvs_client.hpp
common/include/lattices/: core_lattices.hpp  lattice.hpp  lww_pair_lattice.hpp  multi_key_causal_lattice.hpp  priority_lattice.hpp  single_key_causal_lattice.hpp
common/include/zmq/: socket_cache.cpp  socket_cache.hpp  zmq_util.cpp  zmq_util.hpp
config/: config.yml
config/multiple_node/: config126.yml  config129.yml
include/: cpp_function.hpp  pheromone_client.h
results/inter-host/finra/: build_all.sh  config126.yml  config129.yml  start_all.sh
results/inter-host/function_chain/: config126.yml  register.sh  results.txt  start_all.sh
results/inter-host/media_service/: build_all.sh  config126.yml  config129.yml  start_all.sh  stop_all.sh
results/inter-host/transfer_data/: README.md  config126.yml  config129.yml  register.sh  results.txt  start_all.sh
results/intra-host/finra/: build_all.sh  copy_func.sh  invoke.sh  start_all.sh  start_executor.sh  stop_all.sh
results/intra-host/function_chain/: build_all.sh  config129.yml  invoke.sh  new_results.txt  results.txt  start_all.sh  stop_all.sh
results/intra-host/media_service/: build_all.sh  config129.yml  start_all.sh
results/intra-host/transfer_data/: config129.yml  invoke.sh  results.txt  results_add_trigger.txt  results_without_trigger.txt  start_all.sh
src-gen/: anna.pb.cc  anna.pb.h  common.pb.cc  common.pb.h  kvs.pb.cc  kvs.pb.h  operation.pb.cc  operation.pb.h
src/coordinator/: CMakeLists.txt  app_register_handler.cpp  bucket_op_handler.cpp  coord_handlers.hpp  coordinator.cpp  func_call_handler.cpp  notify_handler.cpp  query_handler.cpp  trigger_op_handler.cpp
src/executor/: CMakeLists.txt  executor.cpp  function_lib.hpp
src/manager/: CMakeLists.txt  manager.cpp
src/scheduler/: CMakeLists.txt  comm_helper.hpp  object_handlers.cpp  object_handlers.hpp  scheduler.cpp
